# gluefiles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gluefiles.cpp  icons.qrc  translations.qrc
cmake/: windeployqt.cmake
i18n/: gluefiles_es.ts  gluefiles_es_ES.qm
icons/: app.rc
