cmake_minimum_required(VERSION 3.16)
project(gluefiles LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 REQUIRED COMPONENTS Widgets)
if (WIN32)
  add_executable(gluefiles WIN32 gluefiles.cpp)
else()
  add_executable(gluefiles gluefiles.cpp)
endif()
target_sources(gluefiles PRIVATE
  translations.qrc
  icons.qrc
)
if (WIN32 AND EXISTS "${CMAKE_SOURCE_DIR}/icons/icon.ico")
  target_sources(gluefiles PRIVATE icons/app.rc)
endif()

target_link_libraries(gluefiles PRIVATE Qt6::Widgets)
install(TARGETS gluefiles RUNTIME DESTINATION .)
if (WIN32)
  set(CPACK_PACKAGE_NAME "GlueFiles")
  set(CPACK_PACKAGE_VENDOR "Silicon Quality Commons")
  set(CPACK_PACKAGE_VERSION "1.0.0")
  set(CPACK_GENERATOR "NSIS")
  set(CPACK_INSTALL_SCRIPTS "${CMAKE_SOURCE_DIR}/cmake/windeployqt.cmake")
endif()
if (UNIX AND NOT APPLE AND NOT WIN32)
  set(CPACK_PACKAGE_NAME "gluefiles")
  set(CPACK_PACKAGE_VERSION "1.0.0")
  set(CPACK_GENERATOR "TGZ")
endif()

include(CPack)
